[package]
name = "kismesis"
description = "A static site generator with plugins and a custom markup language."
license-file = "LICENSE.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lilith-in-starlight/kismesis"

[dependencies]
colored = "2.1.0"
directories = "5.0.1"
extism = { version = "1.0.0", optional = true } 
ron = "0.8.1"
serde = { version = "1.0.195", optional = true }
serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true}
termsize = "0.1.6"

[features]
default = ["plugins"]
plugins = ["dep:extism", "dep:serde", "dep:serde_json"]
