[package]
name = "kismesis"
description = "A static site generator with plugins and a custom markup language."
license-file = "LICENSE.md"
version = "0.1.14"
edition = "2021"
repository = "https://github.com/lilith-in-starlight/kismesis"

[dependencies]
colored = { version = "2.1.0", optional = true }
extism = { version = "1.0.0", optional = true } 
serde = { version = "1.0.195", features=["derive"], optional = true }
serde_json = { version = "1.0.111", features = ["unbounded_depth"] , optional = true }
termsize = { version = "0.1.6", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]
plugins = ["dep:extism", "serde"]
reporting = ["dep:colored", "dep:termsize"]
pdk = ["serde"]

[profile.dev]
lto="off"
